// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarOrderRouting renders correctly, 1 hop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div />
      <div
        style="isolation: isolate;"
      >
        <div
          class="Row-sc-1nzvhrh-0 ToolbarOrderRouting__OrderRoutingRow-sc-6rzp4w-0 iYjZBm cMNVqM"
        >
          <div
            class="type__TextWrapper-sc-16386l-0 hnjWoB body body-2 css-d5fsiy"
          >
            Order routing
          </div>
          <div
            class="Popover__Reference-sc-1liex6z-1 hplZxv"
          >
            <div
              class="Row-sc-1nzvhrh-0 hFfxta"
              style="outline: none;"
              tabindex="-1"
            >
              <svg
                class="icons-sc-lekdau-0 iSRwlR"
                fill="none"
                height="20"
                viewBox="0 0 23 20"
                width="23"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <lineargradient
                    gradientTransform="rotate(95)"
                    id="AutoRouterIconGradient0"
                    x1="0"
                    x2="1"
                    y1="0"
                    y2="0"
                  >
                    <stop
                      id="stop1"
                      offset="0"
                      stop-color="#2274E2"
                    />
                    <stop
                      id="stop1"
                      offset="0.5"
                      stop-color="#2274E2"
                    />
                    <stop
                      id="stop2"
                      offset="1"
                      stop-color="#3FB672"
                    />
                  </lineargradient>
                </defs>
                <path
                  d="M16 16C10 16 9 10 5 10M16 16C16 17.6569 17.3431 19 19 19C20.6569 19 22 17.6569 22 16C22 14.3431 20.6569 13 19 13C17.3431 13 16 14.3431 16 16ZM5 10C9 10 10 4 16 4M5 10H1.5M16 4C16 5.65685 17.3431 7 19 7C20.6569 7 22 5.65685 22 4C22 2.34315 20.6569 1 19 1C17.3431 1 16 2.34315 16 4Z"
                  stroke="url(#AutoRouterIconGradient0)"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <div
                class="type__TextWrapper-sc-16386l-0 kEGyHj RoutingDiagram__StyledAutoRouterLabel-sc-3p4p27-0 hyAjPo css-aeawsu"
              >
                <div
                  class="type__TextWrapper-sc-16386l-0 jukanU subhead subhead-2 css-e17nie"
                >
                  Auto Router
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div />
    <div
      style="isolation: isolate;"
    >
      <div
        class="Row-sc-1nzvhrh-0 ToolbarOrderRouting__OrderRoutingRow-sc-6rzp4w-0 iYjZBm cMNVqM"
      >
        <div
          class="type__TextWrapper-sc-16386l-0 hnjWoB body body-2 css-d5fsiy"
        >
          Order routing
        </div>
        <div
          class="Popover__Reference-sc-1liex6z-1 hplZxv"
        >
          <div
            class="Row-sc-1nzvhrh-0 hFfxta"
            style="outline: none;"
            tabindex="-1"
          >
            <svg
              class="icons-sc-lekdau-0 iSRwlR"
              fill="none"
              height="20"
              viewBox="0 0 23 20"
              width="23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <lineargradient
                  gradientTransform="rotate(95)"
                  id="AutoRouterIconGradient0"
                  x1="0"
                  x2="1"
                  y1="0"
                  y2="0"
                >
                  <stop
                    id="stop1"
                    offset="0"
                    stop-color="#2274E2"
                  />
                  <stop
                    id="stop1"
                    offset="0.5"
                    stop-color="#2274E2"
                  />
                  <stop
                    id="stop2"
                    offset="1"
                    stop-color="#3FB672"
                  />
                </lineargradient>
              </defs>
              <path
                d="M16 16C10 16 9 10 5 10M16 16C16 17.6569 17.3431 19 19 19C20.6569 19 22 17.6569 22 16C22 14.3431 20.6569 13 19 13C17.3431 13 16 14.3431 16 16ZM5 10C9 10 10 4 16 4M5 10H1.5M16 4C16 5.65685 17.3431 7 19 7C20.6569 7 22 5.65685 22 4C22 2.34315 20.6569 1 19 1C17.3431 1 16 2.34315 16 4Z"
                stroke="url(#AutoRouterIconGradient0)"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <div
              class="type__TextWrapper-sc-16386l-0 kEGyHj RoutingDiagram__StyledAutoRouterLabel-sc-3p4p27-0 hyAjPo css-aeawsu"
            >
              <div
                class="type__TextWrapper-sc-16386l-0 jukanU subhead subhead-2 css-e17nie"
              >
                Auto Router
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ToolbarOrderRouting renders correctly, 2 hops 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div />
      <div
        style="isolation: isolate;"
      >
        <div
          class="Row-sc-1nzvhrh-0 ToolbarOrderRouting__OrderRoutingRow-sc-6rzp4w-0 iYjZBm cMNVqM"
        >
          <div
            class="type__TextWrapper-sc-16386l-0 hnjWoB body body-2 css-d5fsiy"
          >
            Order routing
          </div>
          <div
            class="Popover__Reference-sc-1liex6z-1 hplZxv"
          >
            <div
              class="Row-sc-1nzvhrh-0 hFfxta"
              style="outline: none;"
              tabindex="-1"
            >
              <svg
                class="icons-sc-lekdau-0 iSRwlR"
                fill="none"
                height="20"
                viewBox="0 0 23 20"
                width="23"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <lineargradient
                    gradientTransform="rotate(95)"
                    id="AutoRouterIconGradient2"
                    x1="0"
                    x2="1"
                    y1="0"
                    y2="0"
                  >
                    <stop
                      id="stop1"
                      offset="0"
                      stop-color="#2274E2"
                    />
                    <stop
                      id="stop1"
                      offset="0.5"
                      stop-color="#2274E2"
                    />
                    <stop
                      id="stop2"
                      offset="1"
                      stop-color="#3FB672"
                    />
                  </lineargradient>
                </defs>
                <path
                  d="M16 16C10 16 9 10 5 10M16 16C16 17.6569 17.3431 19 19 19C20.6569 19 22 17.6569 22 16C22 14.3431 20.6569 13 19 13C17.3431 13 16 14.3431 16 16ZM5 10C9 10 10 4 16 4M5 10H1.5M16 4C16 5.65685 17.3431 7 19 7C20.6569 7 22 5.65685 22 4C22 2.34315 20.6569 1 19 1C17.3431 1 16 2.34315 16 4Z"
                  stroke="url(#AutoRouterIconGradient2)"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <div
                class="type__TextWrapper-sc-16386l-0 kEGyHj RoutingDiagram__StyledAutoRouterLabel-sc-3p4p27-0 hyAjPo css-aeawsu"
              >
                <div
                  class="type__TextWrapper-sc-16386l-0 jukanU subhead subhead-2 css-e17nie"
                >
                  Auto Router
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div />
    <div
      style="isolation: isolate;"
    >
      <div
        class="Row-sc-1nzvhrh-0 ToolbarOrderRouting__OrderRoutingRow-sc-6rzp4w-0 iYjZBm cMNVqM"
      >
        <div
          class="type__TextWrapper-sc-16386l-0 hnjWoB body body-2 css-d5fsiy"
        >
          Order routing
        </div>
        <div
          class="Popover__Reference-sc-1liex6z-1 hplZxv"
        >
          <div
            class="Row-sc-1nzvhrh-0 hFfxta"
            style="outline: none;"
            tabindex="-1"
          >
            <svg
              class="icons-sc-lekdau-0 iSRwlR"
              fill="none"
              height="20"
              viewBox="0 0 23 20"
              width="23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <lineargradient
                  gradientTransform="rotate(95)"
                  id="AutoRouterIconGradient2"
                  x1="0"
                  x2="1"
                  y1="0"
                  y2="0"
                >
                  <stop
                    id="stop1"
                    offset="0"
                    stop-color="#2274E2"
                  />
                  <stop
                    id="stop1"
                    offset="0.5"
                    stop-color="#2274E2"
                  />
                  <stop
                    id="stop2"
                    offset="1"
                    stop-color="#3FB672"
                  />
                </lineargradient>
              </defs>
              <path
                d="M16 16C10 16 9 10 5 10M16 16C16 17.6569 17.3431 19 19 19C20.6569 19 22 17.6569 22 16C22 14.3431 20.6569 13 19 13C17.3431 13 16 14.3431 16 16ZM5 10C9 10 10 4 16 4M5 10H1.5M16 4C16 5.65685 17.3431 7 19 7C20.6569 7 22 5.65685 22 4C22 2.34315 20.6569 1 19 1C17.3431 1 16 2.34315 16 4Z"
                stroke="url(#AutoRouterIconGradient2)"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <div
              class="type__TextWrapper-sc-16386l-0 kEGyHj RoutingDiagram__StyledAutoRouterLabel-sc-3p4p27-0 hyAjPo css-aeawsu"
            >
              <div
                class="type__TextWrapper-sc-16386l-0 jukanU subhead subhead-2 css-e17nie"
              >
                Auto Router
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ToolbarOrderRouting renders correctly, 3 hops across 2 swaps 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div />
      <div
        style="isolation: isolate;"
      >
        <div
          class="Row-sc-1nzvhrh-0 ToolbarOrderRouting__OrderRoutingRow-sc-6rzp4w-0 iYjZBm cMNVqM"
        >
          <div
            class="type__TextWrapper-sc-16386l-0 hnjWoB body body-2 css-d5fsiy"
          >
            Order routing
          </div>
          <div
            class="Popover__Reference-sc-1liex6z-1 hplZxv"
          >
            <div
              class="Row-sc-1nzvhrh-0 hFfxta"
              style="outline: none;"
              tabindex="-1"
            >
              <svg
                class="icons-sc-lekdau-0 iSRwlR"
                fill="none"
                height="20"
                viewBox="0 0 23 20"
                width="23"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <lineargradient
                    gradientTransform="rotate(95)"
                    id="AutoRouterIconGradient4"
                    x1="0"
                    x2="1"
                    y1="0"
                    y2="0"
                  >
                    <stop
                      id="stop1"
                      offset="0"
                      stop-color="#2274E2"
                    />
                    <stop
                      id="stop1"
                      offset="0.5"
                      stop-color="#2274E2"
                    />
                    <stop
                      id="stop2"
                      offset="1"
                      stop-color="#3FB672"
                    />
                  </lineargradient>
                </defs>
                <path
                  d="M16 16C10 16 9 10 5 10M16 16C16 17.6569 17.3431 19 19 19C20.6569 19 22 17.6569 22 16C22 14.3431 20.6569 13 19 13C17.3431 13 16 14.3431 16 16ZM5 10C9 10 10 4 16 4M5 10H1.5M16 4C16 5.65685 17.3431 7 19 7C20.6569 7 22 5.65685 22 4C22 2.34315 20.6569 1 19 1C17.3431 1 16 2.34315 16 4Z"
                  stroke="url(#AutoRouterIconGradient4)"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              <div
                class="type__TextWrapper-sc-16386l-0 kEGyHj RoutingDiagram__StyledAutoRouterLabel-sc-3p4p27-0 hyAjPo css-aeawsu"
              >
                <div
                  class="type__TextWrapper-sc-16386l-0 jukanU subhead subhead-2 css-e17nie"
                >
                  Auto Router
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div />
    <div
      style="isolation: isolate;"
    >
      <div
        class="Row-sc-1nzvhrh-0 ToolbarOrderRouting__OrderRoutingRow-sc-6rzp4w-0 iYjZBm cMNVqM"
      >
        <div
          class="type__TextWrapper-sc-16386l-0 hnjWoB body body-2 css-d5fsiy"
        >
          Order routing
        </div>
        <div
          class="Popover__Reference-sc-1liex6z-1 hplZxv"
        >
          <div
            class="Row-sc-1nzvhrh-0 hFfxta"
            style="outline: none;"
            tabindex="-1"
          >
            <svg
              class="icons-sc-lekdau-0 iSRwlR"
              fill="none"
              height="20"
              viewBox="0 0 23 20"
              width="23"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <lineargradient
                  gradientTransform="rotate(95)"
                  id="AutoRouterIconGradient4"
                  x1="0"
                  x2="1"
                  y1="0"
                  y2="0"
                >
                  <stop
                    id="stop1"
                    offset="0"
                    stop-color="#2274E2"
                  />
                  <stop
                    id="stop1"
                    offset="0.5"
                    stop-color="#2274E2"
                  />
                  <stop
                    id="stop2"
                    offset="1"
                    stop-color="#3FB672"
                  />
                </lineargradient>
              </defs>
              <path
                d="M16 16C10 16 9 10 5 10M16 16C16 17.6569 17.3431 19 19 19C20.6569 19 22 17.6569 22 16C22 14.3431 20.6569 13 19 13C17.3431 13 16 14.3431 16 16ZM5 10C9 10 10 4 16 4M5 10H1.5M16 4C16 5.65685 17.3431 7 19 7C20.6569 7 22 5.65685 22 4C22 2.34315 20.6569 1 19 1C17.3431 1 16 2.34315 16 4Z"
                stroke="url(#AutoRouterIconGradient4)"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <div
              class="type__TextWrapper-sc-16386l-0 kEGyHj RoutingDiagram__StyledAutoRouterLabel-sc-3p4p27-0 hyAjPo css-aeawsu"
            >
              <div
                class="type__TextWrapper-sc-16386l-0 jukanU subhead subhead-2 css-e17nie"
              >
                Auto Router
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
